test/expected/regression-net-socket.txt
/scripts/regression-net-socket.js:7
  throw new Error('trace');
  ^

Error: trace
    at Server.<anonymous> (/scripts/regression-net-socket.js:7:9)
    at emitOne (events.js:90:13)
    at Server.emit (events.js:182:7)
    at TCP.onconnection (net.js:1436:8)
    at createServerHandle (net.js:1157:14)
    at Server._listen2 (net.js:1215:14)
    at listen (net.js:1267:10)
    at net.js:1376:9
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:63:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:82:10)
    at Object.lookup (dns.js:165:19)
    at listenAfterLookup (net.js:1371:20)
    at Server.listen (net.js:1367:5)
    at Object.<anonymous> (/scripts/regression-net-socket.js:10:8)
    at Module._compile (module.js:413:34)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Function.Module.runMain (module.js:447:10)
    at startup (node.js:141:18)
    at node.js:933:3
